--- a/public/index_back.html
+++ b/public/index_back.html
@@ -14,11 +14,10 @@
 </head>
 
 <body>
-  <%- include('./partials/_nav'); %>
-
-  <h1>Rohit 🥔</h1>
-
-
+  <%- include('partials/_nav') %>
+  <main>
+    <p>Have fun! 🥔</p>
+  </main>
 </body>
 
 </html>
